# huxley

./: .gitignore  LICENSE  README.md  pyproject.toml
huxley/: ai.py  compiler.py  ghost_context.py  grammar.py  log_parser.py  main.py  server.py  settings.py  synctex.py
sample/: macros.sty  main.tex  references.bib
sample/chapters/: background.tex  introduction.tex  relatedWork.tex
web/: combobox.js  dialogs.js  editor.js  ghosttext.js  grammar.js  huxley.css  improve.js  index.html  settings.js
