[project]
name = "huxley"
version = "0.1.0"
description = "A local desktop LaTeX editor"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pywebview>=5.1",
    "websockets>=12.0",
    "watchfiles>=0.21",
    "httpx>=0.27",
    "language-tool-python>=2.8",
]

[project.scripts]
huxley = "huxley.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["huxley"]
